<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- common -->
    <string name="app_name">Eater</string>
    <string name="team_info">LoliClub</string>
    <string name="no_function">This function has not finish</string>
    <string name="copy_right">Copyright ©2015 Loliclub. All Rights Reserved</string>
    <string name="submit">Submit</string>

    <!--title-->
    <string name="title_activity_eater">EaterInfo</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_order">Order</string>
    <string name="title_activity_Analysis">Analysis</string>
    <string name="title_activity_Chat">Chat</string>
    <string name="title_activity_Setting">Setting</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="title_activity_sign_in">signIn</string>
    <string name="title_activity_admin">Admin</string>

    <!-- login params -->
    <string name="params_appname">eater</string>
    <string name="params_carrier">eater</string>
    <string name="params_username">eater@lifesense.com</string>
    <string name="params_password">lifesenseeater</string>

    <!-- menu -->
    <string name="action_search">Search</string>
    <string name="action_eaterinfo">EaterInfo</string>
    <string name="action_list">Menu</string>
    <string name="action_about">About</string>
    <string name="action_edit">Edit</string>

    <!--navigationFragment-->
    <string name="navigation_signTitle">SignIn or SignUp</string>
    <string name="navigation_menu">Menu</string>
    <string name="navigation_order">Order</string>
    <string name="navigation_analysis">Analysis</string>
    <string name="navigation_chat">Chat</string>
    <string name="navigation_setting">Setting</string>
    <string name="navigation_admin">Admin</string>
    <string name="navigation_about">About</string>

    <!--signActivity-->
    <string name="signActivity_welcome">Welcome</string>
    <string name="signActivity_welcome_back">Welcome back</string>
    <string name="signActivity_signup_tips">I don\'t have Account</string>
    <string name="signActivity_name">Name</string>
    <string name="signActivity_passwrod">Password</string>
    <string name="signActivity_signIn">Sign In</string>
    <string name="signActivity_signUp">Sign Up</string>
    <string name="signActivity_showPassword">Show passwrod</string>
    <string name="signActivity_noSigninTip">You have not sign in Eater, please sign in and finish the order or </string>
    
    <!--listViewItem-->

    <!--aboutActivity-->
    <string name="aboutActivity_about">If you have any suggestion,please tell me.By the way, I will not modify at all.←_←</string>

    <!--adminActivity-->
    <string name="adminActivity_restaurant">Restaurant</string>
    <string name="adminActivity_restaurant_name">Restaurant name</string>
    <string name="adminActivity_restaurant_phone">Restaurant PhoneNumber</string>
    <string name="adminActivity_meat">Meat</string>
    <string name="adminActivity_meat_name">Meat name</string>
    <string name="adminActivity_meat_price">Meat Price</string>
    <string name="adminActivity_meat_category">Category</string>

    <!--tips-->
    <string name="tips_notFinish">Have not finish</string>

</resources>