<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.loliclub.eater.activity.AboutActivity">

    <View
        android:id="@id/statusbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/status_bar_height"
        android:background="@color/color_primary" />

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:padding="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/ic_welcome"/>

            <TextView
                android:id="@id/aboutActivity_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textSize="@dimen/abc_text_size_title_material"
                android:text="@string/app_name"
                android:textColor="@color/text_black_main"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/aboutActivity_about"
                android:textSize="@dimen/abc_text_size_caption_material"
                android:textColor="@color/text_black_main"/>

        </LinearLayout>

    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_gravity="center_horizontal|bottom"
        android:textColor="@color/text_black_sub"
        android:textSize="@dimen/abc_text_size_caption_material"
        android:text="@string/copy_right"/>

</LinearLayout>
